--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<h1>Hellou Ma Babi ;O</h1>
+		<template>
+  			<nav class="navbar navbar-dark bg-dark">
+    		<router-link to="/" class = "navbar-brand">Homepage</router-link>
+    		<router-link to="/postcreationpage" class="navbar-brand">Post creation page</router-link>
+		</nav>
+</template>
 	</body>
 </html>
