--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
+    /*<script src="/dist/build.js"></script>*/
+    <script>
+	import Header from './Components/Header.vue';
+	export default{
+		components: {
+			appHeader: Header
+		}
+	}
+</script>
   </body>
 </html>
