--- a/index.html
+++ b/index.html
@@ -2,37 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>PresentConnect Task</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
-    <h1>Under construction</h1>
-    <div id="temp" class="progress">
-  		<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="17" aria-valuemin="0" aria-valuemax="100" style="width: 17%">17%</div>
-	</div>
-	<img src="https://images.pexels.com/photos/34676/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+    <div id="app"></div>
+    <script src="/dist/build.js"></script>
   </body>
-  <style type="text/css">
-
-  	body{
-  		background-color: black;
-  	}
-  	h1{
-  		font-style: italic;
-  		color: #1E90FF;
-  		text-align: center;
-  	}
-  	#temp{
-  		width:75%;
-  		height: 30px;
-  		margin-left: 12%;
-  	}
-  	img{
-  		margin-top: 40px;
-  		margin-left: 25%;
-  		height: 50%;
-  		width: 50%;
-  	}
-  </style>
 </html>
